[package]
name = "sshfuse"
version = "0.1.0"
authors = ["Joshua Koo <zz85nus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
console = "0.14.1"
chrono = "0.4.19"
fuse_mt = "0.5.1"
indicatif = { git = "https://github.com/mitsuhiko/indicatif", branch = "main" }
rand = "0.8.4"
